Changed input type to open numeric keypad on phone

--- a/sudoku-solver/index.html
+++ b/sudoku-solver/index.html
@@ -21,263 +21,263 @@
 		<div id="puzzle-grid">
 			<div class="custom-row">
 				<div class="cell light">
-					<input id="11" type="text">
+					<input id="11" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="12" type="text">
+					<input id="12" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="13" type="text">
+					<input id="13" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="14" type="text">
+					<input id="14" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="15" type="text">
+					<input id="15" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="16" type="text">
+					<input id="16" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="17" type="text">
+					<input id="17" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="18" type="text">
+					<input id="18" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="19" type="text">
+					<input id="19" type="tel">
 				</div>
 			</div>
 			<div class="custom-row">
 				<div class="cell light">
-					<input id="21" type="text">
+					<input id="21" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="22" type="text">
+					<input id="22" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="23" type="text">
+					<input id="23" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="24" type="text">
+					<input id="24" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="25" type="text">
+					<input id="25" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="26" type="text">
+					<input id="26" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="27" type="text">
+					<input id="27" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="28" type="text">
+					<input id="28" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="29" type="text">
+					<input id="29" type="tel">
 				</div>
 			</div>
 			<div class="custom-row">
 				<div class="cell light">
-					<input id="31" type="text">
+					<input id="31" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="32" type="text">
+					<input id="32" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="33" type="text">
+					<input id="33" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="34" type="text">
+					<input id="34" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="35" type="text">
+					<input id="35" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="36" type="text">
+					<input id="36" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="37" type="text">
+					<input id="37" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="38" type="text">
+					<input id="38" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="39" type="text">
+					<input id="39" type="tel">
 				</div>
 			</div>
 			<div class="custom-row">
 				<div class="cell dark">
-					<input id="41" type="text">
+					<input id="41" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="42" type="text">
+					<input id="42" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="43" type="text">
+					<input id="43" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="44" type="text">
+					<input id="44" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="45" type="text">
+					<input id="45" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="46" type="text">
+					<input id="46" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="47" type="text">
+					<input id="47" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="48" type="text">
+					<input id="48" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="49" type="text">
+					<input id="49" type="tel">
 				</div>
 			</div>
 			<div class="custom-row">
 				<div class="cell dark">
-					<input id="51" type="text">
+					<input id="51" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="52" type="text">
+					<input id="52" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="53" type="text">
+					<input id="53" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="54" type="text">
+					<input id="54" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="55" type="text">
+					<input id="55" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="56" type="text">
+					<input id="56" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="57" type="text">
+					<input id="57" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="58" type="text">
+					<input id="58" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="59" type="text">
+					<input id="59" type="tel">
 				</div>
 			</div>
 			<div class="custom-row">
 				<div class="cell dark">
-					<input id="61" type="text">
+					<input id="61" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="62" type="text">
+					<input id="62" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="63" type="text">
+					<input id="63" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="64" type="text">
+					<input id="64" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="65" type="text">
+					<input id="65" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="66" type="text">
+					<input id="66" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="67" type="text">
+					<input id="67" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="68" type="text">
+					<input id="68" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="69" type="text">
+					<input id="69" type="tel">
 				</div>
 			</div>
 			<div class="custom-row">
 				<div class="cell light">
-					<input id="71" type="text">
+					<input id="71" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="72" type="text">
+					<input id="72" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="73" type="text">
+					<input id="73" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="74" type="text">
+					<input id="74" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="75" type="text">
+					<input id="75" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="76" type="text">
+					<input id="76" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="77" type="text">
+					<input id="77" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="78" type="text">
+					<input id="78" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="79" type="text">
+					<input id="79" type="tel">
 				</div>
 			</div>
 			<div class="custom-row">
 				<div class="cell light">
-					<input id="81" type="text">
+					<input id="81" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="82" type="text">
+					<input id="82" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="83" type="text">
+					<input id="83" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="84" type="text">
+					<input id="84" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="85" type="text">
+					<input id="85" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="86" type="text">
+					<input id="86" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="87" type="text">
+					<input id="87" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="88" type="text">
+					<input id="88" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="89" type="text">
+					<input id="89" type="tel">
 				</div>
 			</div>
 			<div class="custom-row">
 				<div class="cell light">
-					<input id="91" type="text">
+					<input id="91" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="92" type="text">
+					<input id="92" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="93" type="text">
+					<input id="93" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="94" type="text">
+					<input id="94" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="95" type="text">
+					<input id="95" type="tel">
 				</div>
 				<div class="cell dark">
-					<input id="96" type="text">
+					<input id="96" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="97" type="text">
+					<input id="97" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="98" type="text">
+					<input id="98" type="tel">
 				</div>
 				<div class="cell light">
-					<input id="99" type="text">
+					<input id="99" type="tel">
 				</div>
 			</div>
 		</div>
