Changed home page css

--- a/index.html
+++ b/index.html
@@ -19,39 +19,46 @@
 	</div>
 	<div id="container">
 		<div class="cool-link" id="translator">
-			<a class="block-anchor-tag" href="./translator">
+			<a class="block-anchor-tag" href="./translator"></a>
+			<div class="app-name">
 				Qwerty &#8644; Dvorak Converter
-			</a>
+			</div>
 		</div>
 		<div class="cool-link" id="sudoku-solver">
-			<a class="block-anchor-tag" href="./sudoku-solver">
-				Sudoku Solver	
-			</a>
+			<a class="block-anchor-tag" href="./sudoku-solver"></a>
+			<div class="app-name">
+				Sudoku Solver
+			</div>
 		</div>
 		<div class="cool-link coming-soon">
-			<a class="block-anchor-tag">
+			<a class="block-anchor-tag"></a>
+			<div class="app-name">
 				Coming Soon...
-			</a>
+			</div>
 		</div>
 		<div class="cool-link coming-soon">
-			<a class="block-anchor-tag">
+			<a class="block-anchor-tag"></a>
+			<div class="app-name">
 				Coming Soon...
-			</a>
+			</div>
 		</div>
 		<div class="cool-link coming-soon">
-			<a class="block-anchor-tag">
+			<a class="block-anchor-tag"></a>
+			<div class="app-name">
 				Coming Soon...
-			</a>
+			</div>
 		</div>
 		<div class="cool-link coming-soon">
-			<a class="block-anchor-tag">
+			<a class="block-anchor-tag"></a>
+			<div class="app-name">
 				Coming Soon...
-			</a>
+			</div>
 		</div>
 		<div class="cool-link coming-soon">
-			<a class="block-anchor-tag">
+			<a class="block-anchor-tag"></a>
+			<div class="app-name">
 				Coming Soon...
-			</a>
+			</div>
 		</div>
 	</div>
 	<!-- <div class="custom-footer">
