Added flappy bird directory

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 				Sudoku Solver
 			</div>
 		</div>
-		<div class="cool-link coming-soon">
-			<a class="block-anchor-tag"></a>
+		<div class="cool-link" id="flappy-bird">
+			<a class="block-anchor-tag" href="./flappy-bird"></a>
 			<div class="app-name">
-				Coming Soon...
+				Flappy Bird
 			</div>
 		</div>
 		<div class="cool-link coming-soon">
