Added new release tag

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			</div>
 		</div>
 		<div class="cool-link" id="flappy-bird">
+			<div class="new-release"></div>
 			<a class="block-anchor-tag" href="./flappy-bird"></a>
 			<div class="app-name">
 				Flappy Bird
