Removed footer from sudoku solver

--- a/sudoku-solver/index.html
+++ b/sudoku-solver/index.html
@@ -330,9 +330,9 @@
 		</div>
 	</div>
 
-	<div class="custom-footer">
+	<!-- <div class="custom-footer">
 		Copyright © NeverSayDie
-	</div>
+	</div> -->
 
 </body>
 </html>
