--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
 				Flappy Bird
 			</div>
 		</div>
-		<div class="cool-link coming-soon">
-			<a class="block-anchor-tag"></a>
+		<div class="cool-link" id="smart-split">
+			<div class="new-release"></div>
+			<a class="block-anchor-tag" href="./smart-split"></a>
 			<div class="app-name">
-				Coming Soon...
+				Smart Split
 			</div>
 		</div>
 		<div class="cool-link coming-soon">
