Added basic layout for smart split

--- a/smart-split/index.html
+++ b/smart-split/index.html
@@ -17,8 +17,38 @@
 	<div class="top-bar">
 		Smart Split
 	</div>
+
 	<div id="container">
-		
+
+		<div id="event-information-div">
+			<input class="full-width bottom-border left-align" id="event-description-input" type="text" placeholder="Event Description" value="" />
+		</div>
+
+		<div class="section-title full-width left-align">Participants</div>
+		<div class="section full-width left-align" id="participants-information-div">
+			<div class="left-align" id="add-participants-div">
+				<input class="bottom-border left-align" id="participant-name-input" type="text" placeholder="Participant Name" value="" />
+				<button class="red" id="add-participant-button">Add Participant</button>
+			</div>
+			<div class="left-align" id="participants-list-div">
+				<div class="participant">
+					Frodo Baggins
+				</div>
+				<div class="participant">
+					Ryuzaki
+				</div>
+				<div class="participant">
+					Heisenberg
+				</div>
+			</div>
+		</div>
+
+		<div class="section-title full-width left-align">Items Details</div>
+		<div class="section full-width left-align">
+
+		</div>
+
 	</div>
+
 </body>
 </html>
