Added add item button

--- a/smart-split/index.html
+++ b/smart-split/index.html
@@ -41,7 +41,7 @@
 
 		<div class="section-title full-width left-align">Items Details</div>
 		<div class="section full-width left-align">
-
+			<button class="red" id="add-item-button" data-ng-click="addParticipant()">Add Item</button>
 		</div>
 
 	</div>
