--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -4,18 +4,23 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Flappy Bird</title>
-	<link rel="shortcut icon" type="image/jpg" href="images/flappy-bird-icon.jpg">
+	<!-- <link rel="shortcut icon" type="image/jpg" href="images/flappy-bird-icon.jpg"> -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/flappy-bird.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/flappy-bird.js"></script>
+	
 </head>
 <body>
 	<div class="top-bar">
 		Flappy Bird
 	</div>
+	<div>
+		<canvas id="canvas" width="800" height="450">
+		</canvas>
+	</div>
+	<script type="text/javascript" src="js/flappy-bird.js"></script>
 </body>
 </html>
