--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -7,6 +7,7 @@
 	<!-- <link rel="shortcut icon" type="image/jpg" href="images/flappy-bird-icon.jpg"> -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Teko:700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/flappy-bird.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
