Added Snake game

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
 				Smart Split
 			</div>
 		</div>
+		<div class="cool-link" id="snake">
+			<div class="new-release"></div>
+			<a class="block-anchor-tag" href="./snake"></a>
+			<div class="app-name">
+				Snake
+			</div>
+		</div>
 		<div class="cool-link coming-soon">
 			<a class="block-anchor-tag"></a>
 			<div class="app-name">
